# video-to-linear

./: .gitignore  README.md  pyproject.toml
src/: app.py  bug_extractor.py  cache.py  config.py  exporter.py  linear_client.py  llm.py  main.py  media.py  prompts.py  transcription.py
templates/: index.html  report.html.j2
tests/: test_bug_extractor.py  test_linear_client.py  test_llm.py  test_media.py  test_transcription.py
