[project]
name = "bug-video-reporter"
version = "0.1.0"
description = "Generate bug reports from narrated testing videos"
authors = [{name="You"}]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "ffmpeg-python>=0.2.0",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "openai>=1.40.0",
  "anthropic>=0.25.0",
  "flask>=3.0",
  "tqdm>=4.66",
  "pandas>=2.2",
  "requests>=2.31"
]

[tool.setuptools.packages.find]
where = ["src"]
