[project]
name = "bug-video-reporter"
version = "0.1.0"
description = "Generate bug reports from narrated testing videos"
authors = [{name="You"}]
requires-python = ">=3.10"
# Lower bounds reflect the majors this code actually targets (e.g. the openai
# 2.x client and the current anthropic SDK). For reproducible installs, pin to
# the exact versions in requirements.lock.
dependencies = [
  "pydantic>=2.6,<3",
  "ffmpeg-python>=0.2.0",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "openai>=2.0,<3",
  "anthropic>=0.40,<1",
  "flask>=3.0,<4",
  "tqdm>=4.66",
  "pandas>=2.2",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
